# deep-learning-exercise

./: .gitignore  linear-regression.py  pyproject.toml
02-installation/: install.md
09-chapter_linear-networks/: linear-regression-concise.py  linear-regression.py  mlp-scratch.py  mlp_concise.py  mlp_scratch.py  softmax-regression.py  softmax_regression.py  softmax_regression_concise.py
10-chapter_multilayer-perceptrons/: mlp_scratch.py  underfit-overfit.py
docs/: installation.md
src/deep_learning_limu/: __init__.py  tools.py
src/deep_learning_limu/chapters/09-chapter_linear-networks/: softmax_regression.py  softmax_regression_concise.py  softmax_regression_full_annotation.py
src/deep_learning_limu/chapters/10-chapter_multilayer-perceptrons/: mlp_concise.py  mlp_scratch.py  underfit-overfit.py
tools/: __init__.py
