[project]
name = "deep_learning_limu"
version = "0.1.0"
description = "深度学习教材《动手学深度学习》代码实现"
# readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Will" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "torch>=1.12.0",
    "torchvision>=0.13.0",
    "numpy>=1.21.0",
    "matplotlib>=3.5.0",
    "d2l>=0.17.0",
    "jupyter>=1.0.0",
    "ipython>=7.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/deep_learning_limu"]

[dependency-groups]
dev = []

